; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wl12xx/extr_event.c_wl12xx_wait_for_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ti/wl12xx/extr_event.c_wl12xx_wait_for_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1271 = type { i32 }

@ROLE_STOP_COMPLETE_EVENT_ID = common dso_local global i32 0, align 4
@PEER_REMOVE_COMPLETE_EVENT_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wl12xx_wait_for_event(%struct.wl1271* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wl1271*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.wl1271* %0, %struct.wl1271** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %14 [
    i32 128, label %10
    i32 129, label %12
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* @ROLE_STOP_COMPLETE_EVENT_ID, align 4
  store i32 %11, i32* %8, align 4
  br label %15

12:                                               ; preds = %3
  %13 = load i32, i32* @PEER_REMOVE_COMPLETE_EVENT_ID, align 4
  store i32 %13, i32* %8, align 4
  br label %15

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

15:                                               ; preds = %12, %10
  %16 = load %struct.wl1271*, %struct.wl1271** %5, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @wlcore_cmd_wait_for_event_or_timeout(%struct.wl1271* %16, i32 %17, i32* %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %15, %14
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @wlcore_cmd_wait_for_event_or_timeout(%struct.wl1271*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
